2006-05-30  Robert Schuster  <robertschuster@fsfe.org>

	* java/awt/Container.java:
	(removeAll): Reimplemented, added note.

2006-05-30  Robert Schuster  <robertschuster@fsfe.org>

        * java/awt/Container.java:
        (removeAll): Implemented different removal mechanism, added note.

2006-05-30  Lillian Angel  <langel@redhat.com>

	PR 27785
	* java/awt/Component.java:
	(translateEvent): Added handling to translate WindowEvents
	* java/awt/Window.java:
	Removed unneeded imports.

2006-05-30  Mark Wielaard  <mark@klomp.org>

	* native/jni/gtk-peer/Makefile.am (libgtkpeer_la_SOURCES): Add
	cairographics2d.h.

2006-05-30  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/java/awt/peer/gtk/GtkImage.java: Fix constructor javadoc.

2006-05-29  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/java/awt/peer/gtk/CairoGraphics2D.java
	(clearRect): Do not reuse the fg field, call updateColor.
	(drawRaster): Likewise.
	(setColor): Call updateColor.
	(updateColor): New method.

2006-05-30  Mark Wielaard  <mark@klomp.org>

	* native/jni/classpath/jcl.h (JLONG_TO_PTR): New macro.
	(PTR_TO_JLONG): Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_CairoGraphics2D.c
	(getPointer): Use new conversion macros.
	(Java_gnu_java_awt_peer_gtk_CairoGraphics2D_init): Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_CairoSurface.c
	(Java_gnu_java_awt_peer_gtk_CairoSurface_newCairoContext):
	Likewise.
	(setNativeObject): Likewise.
	(getNativeObject): Likewise.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_ComponentGraphics.c
	(cp_java_awt_peer_gtk_ComponentGraphics_grab_current_drawable):
	Mark static.
	(Java_gnu_java_awt_peer_gtk_ComponentGraphics_initState):
	Correctly cast XID and pointer values.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_ComponentGraphicsCopy.c
	(Java_gnu_java_awt_peer_gtk_ComponentGraphicsCopy_getPixbuf):
	Mark unused variables.
	(Java_gnu_java_awt_peer_gtk_ComponentGraphicsCopy_copyPixbuf):
	Likewise.